# unclecode-crawl4ai

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml
.github/workflows/: aio-provenance.yml  build-ghcr.yml  verify-ghcr-candidate.yml
aio/: VERIFICATION.md
aio/camoufox/: components.lock.json
aio/provenance/: README.md  components.json  components.lock.json
aio/runtime/: pyproject.toml
aio/searxng/: README.md  requirements-server.txt  requirements.txt  settings.yml
build-logs/: README.md
deploy/docker/: README.md  aio_web_tools.py  api.py  auth.py  egress_proxy.py  entrypoint.sh  job.py  mcp_bridge.py  output_control.py  requirements.txt  schemas.py  server.py  supervisord.conf  utils.py
deploy/docker/tests/: test_mcp_config_output_control.py  test_security_container_posture.py  test_security_egress_proxy.py  test_security_ssrf_crawl.py
docs/docker/: image-matrix.md
scripts/: aio-camoufox-verify  aio-provenance-resolve  aio-provenance-validate-spec  aio-provenance-verify  aio-provenance-verify-bootstrap  aio_provenance.py
tests/aio_provenance/: test_aio_provenance.py
tests/aio_provenance/fixtures/: gh-release.json  gh-tag-ref.json  imagetools-index.json  imagetools-platform.json
tests/docker/: smoke-test.sh  test_aio_camoufox_static.py  test_aio_searxng_static.py  test_build_ghcr_workflow.py  test_candidate_verification_architecture.py  verify_aio_rest.py  verify_ownership.py  verify_runtime.py  verify_searxng.py
tests/mcp/: test_mcp_http.py
tools/: archive_gh_build.py
