[project]
name = "crawl4ai-aio-runtime"
version = "0.9.2"
requires-python = "==3.12.*"
dependencies = [
    "crawl4ai[all]",
    "fastapi>=0.115.12,<0.137",
    "uvicorn>=0.34.2",
    "gunicorn>=23.0.0",
    "slowapi==0.1.9",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "redis>=5.2.1",
    "dnspython>=2.7.0",
    "email-validator==2.2.0",
    "sse-starlette==2.2.1",
    "pydantic>=2.11",
    "rank-bm25==0.2.2",
    "anyio==4.9.0",
    "pyjwt==2.10.1",
    "mcp==1.28.1",
    "websockets>=15.0.1",
    "httpx[http2]>=0.27.2",
    "pip==26.1.1",
    "torch==2.13.0+cpu",
    "torchvision==0.28.0+cpu",
    "torchaudio==2.11.0+cpu",
]

[tool.uv]
package = false

[tool.uv.sources]
crawl4ai = { path = "../.." }
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
