[project]
name = "crawl4ai-aio-runtime"
version = "0.9.2"
requires-python = "==3.12.*"
dependencies = [
    "crawl4ai[all]",
    "fastapi>=0.115.12,<0.137",
    "uvicorn>=0.34.2",
    "gunicorn>=23.0.0",
    "slowapi==0.1.9",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "redis>=5.2.1",
    "dnspython>=2.7.0",
    "email-validator==2.2.0",
    "sse-starlette==2.2.1",
    "pydantic>=2.11",
    "rank-bm25==0.2.2",
    "anyio==4.9.0",
    "pyjwt==2.10.1",
    "mcp==1.28.1",
    "websockets>=15.0.1",
    "httpx[http2]==0.28.1",
    "pip==26.1.1",
    "babel==2.18.0",
    "certifi==2026.6.17",
    "flask==3.1.3",
    "flask-babel==4.0.0",
    "granian[pname]==2.7.9",
    "httpx-socks[asyncio]==0.10.0",
    "isodate==0.7.2",
    "jinja2==3.1.6",
    "lxml==6.1.1",
    "markdown-it-py==4.2.0",
    "msgspec==0.21.1",
    "pygments==2.20.0",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "sniffio==1.3.1",
    "typer==0.26.8",
    "typing-extensions==4.16.0",
    "valkey==6.1.1",
    "whitenoise==6.12.0",
    "cloverlabs-camoufox==0.6.0",
    # Camoufox Juggler rejects Playwright 1.61's viewport.isMobile field (upstream #653).
    "playwright==1.60.0",
    "torch==2.13.0+cpu",
    "torchvision==0.28.0+cpu",
    "torchaudio==2.11.0+cpu",
]

[tool.uv]
package = false

[tool.uv.sources]
crawl4ai = { path = "../.." }
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
